[package]
name = "kp-objects"
version = "0.1.0"
authors = ["Vedhavyas Singareddi <ved@subspace.network>", "Kumandian <kumandrain@koompi.com>",]
edition = "2021"
license = "Apache-2.0"
homepage = "https://koompi.com"
repository = "https://github.com/kumandra/kumandra"
description = "Primitives for Objects"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../core" }
kumandra-runtime-primitives = { version = "0.1.0", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = [
	"sp-api/std",
	"sp-std/std",
	"kumandra-core-primitives/std",
	"kumandra-runtime-primitives/std",
]
