[package]
name = "kumandra-runtime-primitives"
description = "Runtime primitives for Kumandra Protocol"
license = "GPL-3.0-or-later"
version = "0.1.0"
authors = ["Kumandrian <kumandrian@koompi.com>"]
edition = "2021"
homepage = "https://koompi.com"
repository = "https://github.com/kumandra/runtime"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
parity-util-mem = { version = "0.11.0", optional = true, default-features = false, features = ["primitive-types"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../core" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"parity-util-mem/std",
	"serde",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"kumandra-core-primitives/std",
]
