[package]
name = "kumandra-test-client"
version = "0.1.0"
authors = ["Kumandrian <kumandrian@koompi.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
include = [
	"/src",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.21"
rand = "0.8.5"
schnorrkel = "0.9.1"
sc-chain-spec = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sc-client-api = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kc-consensus = { version = "0.1.0", path = "../../kclients/consensus/kumandra" }
sc-executor = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", features = ["wasmtime"] }
sc-service = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", default-features = false, features = ["wasmtime"] }
sp-api = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kp-consensus = { version = "0.1.0", path = "../../kprimitives/consensus" }
sp-core = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kp-executor = { version = "0.1.0", path = "../../kprimitives/executor" }
sp-runtime = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kumandra-archiving = { path = "../../krml/archiving" }
kumandra-core-primitives = { path = "../../kprimitives/core" }
kumandra-runtime-primitives = { path = "../../kprimitives/runtime" }
kumandra-service = { path = "../../knode/service" }
kumandra-solving = { path = "../../krml/solving" }
kumandra-test-runtime = { version = "0.1.0", features = ["do-not-enforce-cost-of-storage"], path = "../runtime" }
zeroize = "1.5.5"
