[package]
name = "kumandra-test-runtime"
version = "0.1.0"
authors = ["Kumandrian <kumandrian@koompi.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
include = [
	"/src",
	"/build.rs",
	"/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cirrus-primitives = { version = "0.1.0", default-features = false, path = "../../cumulus/primitives" }
cirrus-test-runtime = { version = "0.1.0", default-features = false, path = "../../cumulus/test/runtime" }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
hex-literal = { version = "0.3.3", optional = true }
orml-vesting = { version = "0.4.1-dev", default-features = false, path = "../../orml/vesting" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-executor = { version = "0.1.0", default-features = false, path = "../../kpallets/executor" }
pallet-feeds = { version = "0.1.0", default-features = false, path = "../../kpallets/feeds" }
pallet-grandpa-finality-verifier = { version = "0.1.0", default-features = false, path = "../../kpallets/grandpa-finality-verifier" }
pallet-object-store = { version = "0.1.0", default-features = false, path = "../../kpallets/object-store" }
pallet-offences-kumandra = { version = "0.1.0", default-features = false, path = "../../kpallets/offences-kumandra" }
pallet-rewards = { version = "0.1.0", default-features = false, path = "../../kpallets/rewards" }
pallet-kumandra = { version = "0.1.0", default-features = false, path = "../../kpallets/kumandra" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-transaction-fees = { version = "0.1.0", default-features = false, path = "../../kpallets/transaction-fees" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-block-builder = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", default-features = false, version = "4.0.0-dev"}
kp-consensus = { version = "0.1.0", default-features = false, path = "../../kprimitives/consensus" }
sp-consensus-slots = { version = "0.10.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kp-executor = { version = "0.1.0", default-features = false, path = "../../kprimitives/executor" }
sp-inherents = { git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4", default-features = false, version = "4.0.0-dev"}
kp-objects = { version = "0.1.0", default-features = false, path = "../../kprimitives/objects" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
kumandra-core-primitives = { version = "0.1.0", default-features = false, path = "../../kprimitives/core" }
kumandra-runtime-primitives = { version = "0.1.0", default-features = false, path = "../../kprimitives/runtime" }
kc-consensus = { version = "0.1.0", default-features = false, path = "../../kclients/consensus/kumandra" }
# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }

[build-dependencies]
cirrus-test-runtime = { version = "0.1.0", path = "../../cumulus/test/runtime" }
kumandra-wasm-tools = { version = "0.1.0", default-features = false, path = "../../kutils/wasm-tools" }
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/kumandra/substrate", rev = "b49d8ee54f4bd6e4b5b48f45d08f75705fad95b4" }

[features]
default = ["std"]
std = [
	"cirrus-test-runtime/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"orml-vesting/std",
	"pallet-balances/std",
	"pallet-executor/std",
	"pallet-feeds/std",
	"pallet-grandpa-finality-verifier/std",
	"pallet-object-store/std",
	"pallet-offences-kumandra/std",
	"pallet-rewards/std",
	"pallet-kumandra/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-fees/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"kp-consensus/std",
	"sp-consensus-slots/std",
	"sp-core/std",
	"kp-executor/std",
	"sp-inherents/std",
	"kp-objects/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"kumandra-core-primitives/std",
	"kumandra-runtime-primitives/std",
]
do-not-enforce-cost-of-storage = []
